Fix Windows Tests (#82)
Fix two issues breaking windows tests:
* Explicitly make hobbits UPD tests bind to 127.0.0.1 instead of 0.0.0.0.
  Windows does not easily support binding to multiple interfaes for listening.
* Rely on java native URL creation for file resource tests.

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>